<resources>
    <string name="app_name">SaveNight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="Title">TextView</string>
    <string name="select_a_connection">Select a connection</string>
    <string name="hi_you_can_create_a_new_group_or_join_an_existing_one_by_nearby_connection">Hi! You can create a new group or join an existing one by nearby connection.</string>
    <string name="create_a_new_group">Create a new group</string>
    <string name="or">or</string>
    <string name="join_an_existing_group">Join an existing group</string>
    <string name="start_advertising_your_group_and_get_all_the_people_when_everyone_is_in_you_can_start_lobby">Start advertising your group and get all the people! When everyone is in, you can start lobby!</string>
    <string name="start_advertising">Start Advertising</string>
    <string name="group_name">Group Name</string>
    <string name="groupname">Group Name</string>
    <string name="messages">Messages</string>
    <string name="todo">TODO</string>
    <string name="type_a_message">Type a message</string>
    <string name="received_message">Received message</string>
    <string name="sent_message">Sent message</string>
    <string name="member_name" />
    <string name="hostname">HostName</string>
    <string name="endpoint">endpoint</string>
    <string name="start_lobby">Start Lobby</string>
    <string name="start_discovering">Start Discovering</string>
    <string name="start_discovering_a_group_and_get_in_the_lobby">Start discovering a group and get in the lobby!</string>
    <string name="Join" />

    <string name="take_picture">Take Picture</string>
    <string name="take_picture_description">Camera picture for sample app</string>
    <string name="select_picture">Select Picture</string>
    <string name="upload_picture">Share</string>
    <string name="ok_button_title">OK</string>

    <string name="logout">Logout</string>

</resources>